@@ -1,8 +1,8 @@
 Package: RchivalTag
 Type: Package
 Title: Analyzing Archival Tagging Data
-Version: 0.0.2
-Date: 2017-03-22
+Version: 0.0.3
+Date: 2017-04-10
 Author: Robert Bauer
 Maintainer: Robert Bauer <robert.bauer@ird.fr>
 Description: A set of functions to generate, access and analyze standard data products from archival tagging data.
@@ -11,7 +11,7 @@ Imports: plyr, akima, maptools, graphics, stats, raster, rgeos, ncdf4,
         maps, mapdata, grDevices, oceanmap, sp, methods, PBSmapping
 License: CC BY-NC-SA 4.0
 LazyLoad: yes
-Packaged: 2017-03-24 18:02:44 UTC; robert
+Packaged: 2017-04-10 12:11:51 UTC; robert
 Repository: CRAN
-Date/Publication: 2017-03-24 19:07:25 UTC
+Date/Publication: 2017-04-10 12:34:56 UTC
 NeedsCompilation: no
